# SCP-Helper

./: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  data.service.ts  user-settings.ts
src/app/home/: home.component.html  home.component.ts
src/app/progress/: progress.component.css  progress.component.html  progress.component.ts
src/app/selected/: selected.component.html  selected.component.ts
src/app/settings/: settings.component.html  settings.component.ts
